# gradia-backend

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  dependencies.py  locustfile.py  main.py  pyproject.toml  requirements.txt
db/: __init__.py  study_session.py  subject.py  user.py
docs/: ARCHITECTURE.md
route/: __init__.py  grade_prediction.py  study_session.py  subject.py  temp.py  timetable.py
route/auth/: __init__.py  common.py  google.py  kakao.py
templates/: grade_prediction_template_v2.jinja2  prompt_template.jinja2
test/: README.md  run_test.py  test_grade_prediction_v2.py
utils/: __init__.py  chromium_everytime.py  everytime.py  everytime_base.py  learning_pattern_analyser.py  sync_playwright_everytime.py
